Added code for sprinter photos csv merge.

--- a/notebooks/Worlds_Fastest_Sprinters.ipynb
+++ b/notebooks/Worlds_Fastest_Sprinters.ipynb
@@ -406,6 +406,41 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add the sprinter's photo to the database by merging it with the photo csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sprinter_photo = pd.read_csv(\"../data/Sprinter_Photo.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sprinter_photo.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sprinters = pd.merge(sprinters, sprinter_photo, on=['Athlete'],how='left')\n",
+    "sprinters.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "sSqh7HptvFFB"
    },
