Made updates to the code that decides the rankings. We can try to rank the athletes through the general ranking, zscore, or model. I also removed any athletes that have no 100m times recorded.

--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -1241,6 +1241,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100m = df_100m.dropna(subset='100_PR')\n",
+    "df_100m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2135,6 +2145,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
+    "# Z-score for average_time and years_competed\n",
+    "df_100m['z_time'] = zscore(df_100m['Avg_Season_Best_100m'])\n",
+    "df_100m['z_years'] = zscore(df_100m['Years_Competed_100m'])\n",
+    "df_100m['z_PR'] = zscore(df_100m['100_PR'])\n",
+    "df_100m['z_career_avg_season'] = zscore(df_100m['Career_Avg_100m'])\n",
+    "df_100m['z_total_races'] = zscore(df_100m['total_races_100m'])\n",
+    "df_100m['z_races_per_year'] = zscore(df_100m['Avg_Races_Year_100m'])\n",
+    "\n",
+    "# Z-score comparison (combine time and years)\n",
+    "df_100m['z_combined'] = (df_100m['z_time'] + df_100m['z_years'] + df_100m['z_PR'] + df_100m['z_career_avg_season'] + df_100m['z_total_races'] + df_100m['z_races_per_year'])  / 6\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 2 (Takes into the account the that the total races and avg races per year has a major affect on the combined z-score)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2158,15 +2203,75 @@
    "outputs": [],
    "source": [
     "# Z-score for average_time and years_competed\n",
-    "df_100m['z_time'] = zscore(df_100m['Avg_Season_Best_100m'])\n",
-    "df_100m['z_years'] = zscore(df_100m['Years_Competed_100m'])\n",
-    "df_100m['z_PR'] = zscore(df_100m['100_PR'])\n",
-    "df_100m['z_career_avg_season'] = zscore(df_100m['Career_Avg_100m'])\n",
-    "df_100m['z_total_races'] = zscore(df_100m['total_races_100m'])\n",
-    "df_100m['z_races_per_year'] = zscore(df_100m['Avg_Races_Year_100m'])\n",
+    "df_100m['z_time'] = zscore(df_100m['Avg_Season_Best_100m'],nan_policy='omit')\n",
+    "df_100m['z_years'] = -zscore(df_100m['Years_Competed_100m'],nan_policy='omit')\n",
+    "df_100m['z_PR'] = zscore(df_100m['100_PR'],nan_policy='omit')\n",
+    "df_100m['z_career_avg_season'] = zscore(df_100m['Career_Avg_100m'],nan_policy='omit')\n",
+    "df_100m['z_total_races'] = -zscore(df_100m['total_races_100m'],nan_policy='omit')\n",
+    "df_100m['z_races_per_year'] = -zscore(df_100m['Avg_Races_Year_100m'],nan_policy='omit')\n",
     "\n",
     "# Z-score comparison (combine time and years)\n",
     "df_100m['z_combined'] = (df_100m['z_time'] + df_100m['z_years'] + df_100m['z_PR'] + df_100m['z_career_avg_season'] + df_100m['z_total_races'] + df_100m['z_races_per_year'])  / 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternate Ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100m['alt_rank'] = df_100m['z_combined'].rank(ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100m.sort_values('alt_rank').head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_Score_Ranking_100m = df_100m.sort_values('alt_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_Score_Ranking_100m = pd.DataFrame(Z_Score_Ranking_100m)\n",
+    "Z_Score_Ranking_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make the entire dataframe a figure factory table\n",
+    "\n",
+    "\n",
+    "fig =  ff.create_table(Z_Score_Ranking_100m)\n",
+    "fig.show()\n",
+    "\n",
+    "#fig.write_html(\"Z_Score_Ranking_100m.html\")\n",
+    "#fig.write_image(\"Z_Score_Ranking_100m.svg\")"
    ]
   },
   {
@@ -2225,6 +2330,50 @@
     "\n",
     "#Final ranking\n",
     "df_100m['final_rank'] = df_100m[['rank_personal_best','rank_average_sb', 'rank_career_avg', 'rank_consistency', 'rank_years_competed','rank_total_races','rank_races_per_year']].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100m.sort_values('final_rank').head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Rankings_100m = df_100m.sort_values('final_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Rankings_100m = pd.DataFrame(Final_Rankings_100m)\n",
+    "Final_Rankings_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make the entire dataframe a figure factory table\n",
+    "\n",
+    "\n",
+    "fig =  ff.create_table(Final_Rankings_100m)\n",
+    "fig.show()\n",
+    "\n",
+    "#fig.write_html(\"Final_Rankings_100m.html\")\n",
+    "#fig.write_image(\"Final_Rankings_100m.svg\")"
    ]
   },
   {
@@ -5029,9 +5178,18 @@
    "source": [
     "xlwriter = pd.ExcelWriter('100M_Analysis.xlsx')\n",
     "df_100m.to_excel(xlwriter, sheet_name='100m')\n",
-    "df_100m_stat_analysis.to_excel(xlwriter, sheet_name='100m Statisitcal Analysis')\n",
+    "Z_Score_Ranking_100m.to_excel(xlwriter, sheet_name='100m Z-Score Rankings')\n",
+    "Final_Rankings_100m.to_excel(xlwriter, sheet_name='100m Fianl Rankings')\n",
+    "#df_100m_stat_analysis.to_excel(xlwriter, sheet_name='100m Statisitcal Analysis')\n",
     "xlwriter.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
