Updating code to compute z-score and general rankings.

--- a/notebooks/200M_Career_Analysis.ipynb
+++ b/notebooks/200M_Career_Analysis.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinters = pd.read_csv(\"Worlds_Fastest_Sprinters_Stats.csv\")"
+    "sprinters = pd.read_csv(\"../data/Worlds_Fastest_Sprinters_Stats.csv\")"
    ]
   },
   {
@@ -411,7 +411,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinter_photo = pd.read_csv(\"Sprinter_Photo.csv\")"
+    "sprinter_photo = pd.read_csv(\"../data/Sprinter_Photo.csv\")"
    ]
   },
   {
@@ -499,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinters_df2 = pd.read_csv(\"Worlds_Fastest_Sprinters_Master_List_Yearly_Progression.csv\")\n",
+    "sprinters_df2 = pd.read_csv(\"../data/Worlds_Fastest_Sprinters_Master_List_Yearly_Progression.csv\")\n",
     "sprinters_df2.head(3)"
    ]
   },
@@ -583,7 +583,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinters_df3 = pd.read_csv(\"Sprinter_Career.csv\")\n",
+    "sprinters_df3 = pd.read_csv(\"../data/Sprinter_Career.csv\")\n",
     "sprinters_df3.head(3)"
    ]
   },
@@ -1265,6 +1265,16 @@
    "source": [
     "#df_200m = df_200m.sort_values(by='Avg_Season_Best_200m')\n",
     "#df_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m = df_200m.dropna(subset='200_PR')\n",
+    "df_200m"
    ]
   },
   {
@@ -2048,6 +2058,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2065,6 +2082,7 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
     "# Z-score for average_time and years_competed\n",
     "df_200m['z_time'] = zscore(df_200m['Avg_Season_Best_200m'])\n",
     "df_200m['z_years'] = zscore(df_200m['Years_Competed_200m'])\n",
@@ -2074,7 +2092,93 @@
     "df_200m['z_races_per_year'] = zscore(df_200m['Avg_Races_Year_200m'])\n",
     "\n",
     "# Z-score comparison (combine time and years)\n",
+    "df_200m['z_combined'] = (df_200m['z_time'] + df_200m['z_years'] + df_200m['z_PR']+ df_200m['z_career_avg_season'] + df_200m['z_total_races'] + df_200m['z_races_per_year']) / 6\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 2 (Takes into the account the that the total races and avg races per year has a major affect on the combined z-score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m['z_time'] = zscore(df_200m['Avg_Season_Best_200m'],nan_policy='omit')\n",
+    "df_200m['z_years'] = -zscore(df_200m['Years_Competed_200m'],nan_policy='omit')\n",
+    "df_200m['z_PR'] = zscore(df_200m['200_PR'],nan_policy='omit')\n",
+    "df_200m['z_career_avg_season'] = zscore(df_200m['Career_Avg_200m'],nan_policy='omit')\n",
+    "df_200m['z_total_races'] = -zscore(df_200m['total_races_200m'],nan_policy='omit')\n",
+    "df_200m['z_races_per_year'] = -zscore(df_200m['Avg_Races_Year_200m'],nan_policy='omit')\n",
+    "\n",
+    "# Z-score comparison (combine time and years)\n",
     "df_200m['z_combined'] = (df_200m['z_time'] + df_200m['z_years'] + df_200m['z_PR']+ df_200m['z_career_avg_season'] + df_200m['z_total_races'] + df_200m['z_races_per_year']) / 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternate Ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m['alt_rank'] = df_200m['z_combined'].rank(ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m.sort_values('alt_rank').head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_Score_Ranking_200m = df_200m.sort_values('alt_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_Score_Ranking_200m = pd.DataFrame(Z_Score_Ranking_200m)\n",
+    "Z_Score_Ranking_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make the entire dataframe a figure factory table\n",
+    "\n",
+    "\n",
+    "fig =  ff.create_table(Z_Score_Ranking_200m)\n",
+    "fig.show()\n",
+    "\n",
+    "#fig.write_html(\"Z_Score_Ranking_200m.html\")\n",
+    "#fig.write_image(\"Z_Score_Ranking_200m.svg\")"
    ]
   },
   {
@@ -2110,13 +2214,13 @@
    "outputs": [],
    "source": [
     "# Efficiency score (average_time per year competed)\n",
-    "df_200m['efficiency_score'] = df_200m['Avg Season Best 200m'] / df_200m['Years_Competed_200m']\n",
+    "df_200m['efficiency_score'] = df_200m['Avg_Season_Best_200m'] / df_200m['Years_Competed_200m']\n",
     "\n",
     "# Efficiency score: How close the sprinter's average season best to their personal best\n",
-    "df_200m['efficiency_score_pr'] = df_200m['200_PR'] / df_200m['Avg_Season_Best_200m']\n",
+    "df_200m['efficiency_score_sb'] = df_200m['200_PR'] / df_200m['Avg_Season_Best_200m']\n",
     "\n",
     "# Efficiency score: How close the sprinter's average is to their personal best\n",
-    "df_200m['efficiency_score_pr'] = df_200m['100_PR'] / df_200m['Career_Avg_100m']"
+    "df_200m['efficiency_score_pr'] = df_200m['200_PR'] / df_200m['Career_Avg_200m']"
    ]
   },
   {
@@ -2137,17 +2241,61 @@
    "outputs": [],
    "source": [
     "# Combine rankings based on average_time, consistency, and longevity (years_competed)\n",
-    "df_200m['rank_personal_best'] = df_200m['100_PR'].rank(ascending=True)  # Lower personal best is better\n",
+    "df_200m['rank_personal_best'] = df_200m['200_PR'].rank(ascending=True)  # Lower personal best is better\n",
     "df_200m['rank_average_sb'] = df_200m['Avg_Season_Best_200m'].rank(ascending=True)  # Lower is better\n",
-    "df_200m['rank_career_avg'] = df['Career_Avg_200m'].rank(ascending=True)\n",
+    "df_200m['rank_career_avg'] = df_200m['Career_Avg_200m'].rank(ascending=True)\n",
     "#df_200m['rank_consistency'] = df_200m['consistency'].rank(ascending=True)  # Lower std dev is better\n",
     "df_200m['rank_consistency'] = df_200m['consistency'].abs().rank(ascending=True) # Lower residuals (consistency) is better\n",
     "df_200m['rank_years_competed'] = df_200m['Years_Competed_200m'].rank(ascending=False)  # Longer careers are better\n",
     "df_200m['rank_total_races'] = df_200m['total_races_200m'].rank(ascending=False)  # More races is better\n",
-    "df_200m['rank_races_per_year'] = df_200m['races_per_year_200m'].rank(ascending=False)  # More races per year is better\n",
+    "df_200m['rank_races_per_year'] = df_200m['Avg_Races_Year_200m'].rank(ascending=False)  # More races per year is better\n",
     "\n",
     "#Final ranking\n",
     "df_200m['final_rank'] = df_200m[['rank_personal_best','rank_average_sb', 'rank_career_avg',  'rank_consistency', 'rank_years_competed','rank_total_races','rank_races_per_year']].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m.sort_values('final_rank').head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Rankings_200m = df_200m.sort_values('final_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Rankings_200m = pd.DataFrame(Final_Rankings_200m)\n",
+    "Final_Rankings_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make the entire dataframe a figure factory table\n",
+    "\n",
+    "\n",
+    "fig =  ff.create_table(Final_Rankings_200m)\n",
+    "fig.show()\n",
+    "\n",
+    "#fig.write_html(\"Final_Rankings_200m.html\")\n",
+    "#fig.write_image(\"Final_Rankings_200m.svg\")"
    ]
   },
   {
@@ -2375,23 +2523,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "cpJUCssifOf5"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "df_200m_stat_analysis = pd.DataFrame(df_200m_stat_analysis)"
+    "df_200m = pd.DataFrame(df_200m)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "7D00U-XKI0JI"
+    "id": "cpJUCssifOf5"
    },
    "outputs": [],
    "source": [
-    "df_200m = pd.DataFrame(df_200m)"
+    "df_200m_stat_analysis = pd.DataFrame(df_200m_stat_analysis)"
    ]
   },
   {
@@ -4883,9 +5029,18 @@
    "source": [
     "xlwriter = pd.ExcelWriter('200M_Analysis.xlsx')\n",
     "df_200m.to_excel(xlwriter, sheet_name='200m')\n",
-    "df_200m_stat_analysis.to_excel(xlwriter, sheet_name='200m Statisitcal Analysis')\n",
+    "Z_Score_Ranking_200m.to_excel(xlwriter, sheet_name='200m Z-Score Rankings')\n",
+    "Final_Rankings_200m.to_excel(xlwriter, sheet_name='200m Fianl Rankings')\n",
+    "#df_200m_stat_analysis.to_excel(xlwriter, sheet_name='200m Statisitcal Analysis')\n",
     "xlwriter.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
