--- a/notebooks/400M_Career_Analysis.ipynb
+++ b/notebooks/400M_Career_Analysis.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinters = pd.read_csv(\"Worlds_Fastest_Sprinters_Stats.csv\")"
+    "sprinters = pd.read_csv(\"../data/Worlds_Fastest_Sprinters_Stats.csv\")"
    ]
   },
   {
@@ -411,7 +411,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinter_photo = pd.read_csv(\"Sprinter_Photo.csv\")"
+    "sprinter_photo = pd.read_csv(\"../data/Sprinter_Photo.csv\")"
    ]
   },
   {
@@ -499,7 +499,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinters_df2 = pd.read_csv(\"Worlds_Fastest_Sprinters_Master_List_Yearly_Progression.csv\")\n",
+    "sprinters_df2 = pd.read_csv(\"../data/Worlds_Fastest_Sprinters_Master_List_Yearly_Progression.csv\")\n",
     "sprinters_df2.head(3)"
    ]
   },
@@ -583,7 +583,7 @@
    },
    "outputs": [],
    "source": [
-    "sprinters_df3 = pd.read_csv(\"Sprinter_Career.csv\")\n",
+    "sprinters_df3 = pd.read_csv(\"../data/Sprinter_Career.csv\")\n",
     "sprinters_df3.head(3)"
    ]
   },
@@ -823,7 +823,7 @@
    "source": [
     "plt.figure(figsize = (10,6))\n",
     "\n",
-    "std_plot(All_100m_Races['Time'], edgecolor = 'black', linewidth = 2)"
+    "std_plot(All_400m_Races['Time'], edgecolor = 'black', linewidth = 2)"
    ]
   },
   {
@@ -1260,6 +1260,16 @@
    "source": [
     "#df_400m = df_400m.sort_values(by='Avg_Season_Best_400m')\n",
     "#df_400m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_400m = df_400m.dropna(subset='400_PR')\n",
+    "df_400m"
    ]
   },
   {
@@ -2018,6 +2028,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2025,16 +2042,104 @@
    },
    "outputs": [],
    "source": [
+    "'''\n",
     "# Z-score for average_time and years_competed\n",
     "df_400m['z_time'] = zscore(df_400m['Avg Season Best 400m'])\n",
     "df_400m['z_years'] = zscore(df_400m['Years_Competed_400m'])\n",
     "df_400m['z_PR'] = zscore(df_400m['400_PR'])\n",
-    "df_400m['z_career_avg_season'] = zscore(df['Career_Avg_400m'])\n",
+    "df_400m['z_career_avg_season'] = zscore(df_400m['Career_Avg_400m'])\n",
     "df_400m['z_total_races'] = zscore(df['total_races_400m'])\n",
-    "df_400m['z_races_per_year'] = zscore(df['races_per_year_400m'])\n",
+    "df_400m['z_races_per_year'] = zscore(df['Avg_Races_Year_400m'])\n",
+    "\n",
+    "# Z-score comparison (combine time and years)\n",
+    "df_400m['z_combined'] = (df_400m['z_time'] + df_400m['z_years'] + df_400m['z_PR']+ df_400m['z_career_avg_season'] + df_400m['z_total_races'] + df_400m['z_races_per_year']) / 6\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Version 2 (Takes into the account the that the total races and avg races per year has a major affect on the combined z-score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Z-score for average_time and years_competed\n",
+    "df_400m['z_time'] = zscore(df_400m['Avg_Season_Best_400m'],nan_policy='omit')\n",
+    "df_400m['z_years'] = -zscore(df_400m['Years_Competed_400m'],nan_policy='omit')\n",
+    "df_400m['z_PR'] = zscore(df_400m['400_PR'],nan_policy='omit')\n",
+    "df_400m['z_career_avg_season'] = zscore(df_400m['Career_Avg_400m'],nan_policy='omit')\n",
+    "df_400m['z_total_races'] = -zscore(df_400m['total_races_400m'],nan_policy='omit')\n",
+    "df_400m['z_races_per_year'] = -zscore(df_400m['Avg_Races_Year_400m'],nan_policy='omit')\n",
     "\n",
     "# Z-score comparison (combine time and years)\n",
     "df_400m['z_combined'] = (df_400m['z_time'] + df_400m['z_years'] + df_400m['z_PR']+ df_400m['z_career_avg_season'] + df_400m['z_total_races'] + df_400m['z_races_per_year']) / 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternate Ranking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_400m['alt_rank'] = df_400m['z_combined'].rank(ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_400m.sort_values('alt_rank').head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_Score_Ranking_400m = df_400m.sort_values('alt_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Z_Score_Ranking_400m = pd.DataFrame(Z_Score_Ranking_400m)\n",
+    "Z_Score_Ranking_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make the entire dataframe a figure factory table\n",
+    "\n",
+    "\n",
+    "fig =  ff.create_table(Z_Score_Ranking_400m)\n",
+    "fig.show()\n",
+    "\n",
+    "#fig.write_html(\"Z_Score_Ranking_400m.html\")\n",
+    "#fig.write_image(\"Z_Score_Ranking_400m.svg\")"
    ]
   },
   {
@@ -2055,10 +2160,10 @@
    "outputs": [],
    "source": [
     "# Efficiency score (average_time per year competed)\n",
-    "df_400m['efficiency_score'] = df_400m['Avg Season Best 400m'] / df_400m['Years_Competed_400m']\n",
+    "df_400m['efficiency_score'] = df_400m['Avg_Season_Best_400m'] / df_400m['Years_Competed_400m']\n",
     "\n",
     "# Efficiency score: How close the sprinter's average season best to their personal best\n",
-    "df_400m['efficiency_score_pr'] = df_400m['400_PR'] / df_400m['Avg Season Best 400m']\n",
+    "df_400m['efficiency_score_sb'] = df_400m['400_PR'] / df_400m['Avg_Season_Best_400m']\n",
     "\n",
     "# Efficiency score: How close the sprinter's average is to their personal best\n",
     "df_400m['efficiency_score_pr'] = df_400m['400_PR'] / df_400m['Career_Avg_400m']"
@@ -2083,7 +2188,7 @@
    "source": [
     "# Combine rankings based on average_time, consistency, and longevity (years_competed)\n",
     "df_400m['rank_personal_best'] = df_400m['400_PR'].rank(ascending=True)  # Lower personal best is better\n",
-    "df_400m['rank_average_sb'] = df_400m['Avg Season Best 400m'].rank(ascending=True)  # Lower is better\n",
+    "df_400m['rank_average_sb'] = df_400m['Avg_Season_Best_400m'].rank(ascending=True)  # Lower is better\n",
     "df_400m['rank_career_avg'] = df_400m['Career_Avg_400m'].rank(ascending=True)\n",
     "#df_400m['rank_consistency'] = df_400m['consistency'].rank(ascending=True)  # Lower std dev is better\n",
     "df_400m['rank_consistency'] = df_400m['consistency'].abs().rank(ascending=True) # Lower residuals (consistency) is better\n",
@@ -2093,6 +2198,50 @@
     "\n",
     "#Final ranking\n",
     "df_400m['final_rank'] = df_400m[['rank_personal_best','rank_average_sb', 'rank_career_avg', 'rank_consistency', 'rank_years_competed', 'rank_total_races','rank_races_per_year']].mean(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_400m.sort_values('final_rank').head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Rankings_400m = df_400m.sort_values('final_rank')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Final_Rankings_400m = pd.DataFrame(Final_Rankings_400m)\n",
+    "Final_Rankings_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Let's make the entire dataframe a figure factory table\n",
+    "\n",
+    "\n",
+    "fig =  ff.create_table(Final_Rankings_400m)\n",
+    "fig.show()\n",
+    "\n",
+    "#fig.write_html(\"Final_Rankings_400m.html\")\n",
+    "#fig.write_image(\"Final_Rankings_400m.svg\")"
    ]
   },
   {
@@ -4828,9 +4977,18 @@
    "source": [
     "xlwriter = pd.ExcelWriter('400M_Analysis.xlsx')\n",
     "df_400m.to_excel(xlwriter, sheet_name='400m')\n",
-    "df_400m_stat_analysis.to_excel(xlwriter, sheet_name='400m Statisitcal Analysis')\n",
+    "Z_Score_Ranking_400m.to_excel(xlwriter, sheet_name='400m Z-Score Rankings')\n",
+    "Final_Rankings_400m.to_excel(xlwriter, sheet_name='400m Fianl Rankings')\n",
+    "#df_400m_stat_analysis.to_excel(xlwriter, sheet_name='400m Statisitcal Analysis')\n",
     "xlwriter.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
