--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -552,6 +552,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yrs_competed_100m = pd.DataFrame(yrs_competed_100m)\n",
+    "yrs_competed_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this line of code to find a specific athlete in the data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_100m.loc[(yrs_competed_100m.Athlete == 'Frankie Fredericks')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_100m.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_100m_nulls = yrs_competed_100m[yrs_competed_100m.isnull().any(axis=1)]\n",
+    "#print(yrs_competed_100m_nulls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yrs_competed_100m"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "FmQNjnyu6neV"
@@ -904,6 +958,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Career_average_100m = pd.DataFrame(Career_average_100m)\n",
+    "Career_average_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "eGGJnQD4vJWN"
    },
@@ -947,6 +1011,25 @@
    "source": [
     "athlete_race_count_100m = All_100m_Races.groupby('Athlete').size().reset_index(name='total_races_100m')\n",
     "athlete_race_count_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athlete_race_count_100m = pd.DataFrame(athlete_race_count_100m)\n",
+    "athlete_race_count_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athlete_race_count_100m"
    ]
   },
   {
@@ -1067,6 +1150,69 @@
    "source": [
     "seasons_and_races_100m['Avg_Races_Year_100m'] = round(seasons_and_races_100m['total_races_100m'] / seasons_and_races_100m['Years'],2)\n",
     "seasons_and_races_100m.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m = pd.DataFrame(seasons_and_races_100m)\n",
+    "seasons_and_races_100m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m.at[15, \"Years\"] = 16\n",
+    "seasons_and_races_100m.at[15, \"Avg_Races_Year_100m\"] = 12.5\n",
+    "seasons_and_races_100m.at[20, \"Years\"] = 16\n",
+    "seasons_and_races_100m.at[20, \"Avg_Races_Year_100m\"] = 1\n",
+    "seasons_and_races_100m.at[37, \"Years\"] = 8\n",
+    "seasons_and_races_100m.at[37, \"Avg_Races_Year_100m\"] = 8.25\n",
+    "seasons_and_races_100m.at[40, \"Years\"] = 1\n",
+    "seasons_and_races_100m.at[40, \"Avg_Races_Year_100m\"] = 1\n",
+    "seasons_and_races_100m.at[47, \"Years\"] = 11\n",
+    "seasons_and_races_100m.at[47, \"Avg_Races_Year_100m\"] = 8.18\n",
+    "seasons_and_races_100m.at[56, \"Years\"] = 4\n",
+    "seasons_and_races_100m.at[56, \"Avg_Races_Year_100m\"] = 4.25\n",
+    "seasons_and_races_100m.at[59, \"Years\"] = 14\n",
+    "seasons_and_races_100m.at[59, \"Avg_Races_Year_100m\"] = 5.86"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_100m_Final = pd.DataFrame(seasons_and_races_100m)"
    ]
   },
   {
@@ -1241,10 +1387,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df_100m = df_100m.dropna(subset='100_PR')\n",
+    "df_100m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100m.at[12, \"total_races_100m\"] = 66\n",
+    "df_100m.at[12, \"Years_Competed_100m\"] = 8\n",
+    "df_100m.at[12, \"Career_Avg_100m\"] = 10.214394\n",
+    "df_100m.at[12, \"Avg_Races_Year_100m\"] = 8.25\n",
+    "df_100m.at[12, \"Career_Avg_100m_PR_Diff\"] = .40\n",
+    "df_100m.at[28, \"total_races_100m\"] = 200\n",
+    "df_100m.at[28, \"Years_Competed_100m\"] = 16\n",
+    "df_100m.at[28, \"Career_Avg_100m\"] = 10.155100\n",
+    "df_100m.at[28, \"Avg_Races_Year_100m\"] = 12.50\n",
+    "df_100m.at[28, \"Career_Avg_100m_PR_Diff\"] = .30\n",
+    "df_100m.at[39, \"total_races_100m\"] = 47\n",
+    "df_100m.at[39, \"Years_Competed_100m\"] = 10\n",
+    "df_100m.at[39, \"Career_Avg_100m\"] = 10.262553\n",
+    "df_100m.at[39, \"Avg_Races_Year_100m\"] = 4.70\n",
+    "df_100m.at[39, \"Career_Avg_100m_PR_Diff\"] = .25\n",
+    "df_100m.at[42, \"total_races_100m\"] = 16\n",
+    "df_100m.at[42, \"Years_Competed_100m\"] = 16\n",
+    "df_100m.at[42, \"Career_Avg_100m\"] = 10.241875\n",
+    "df_100m.at[42, \"Avg_Races_Year_100m\"] = 1.0\n",
+    "df_100m.at[42, \"Career_Avg_100m_PR_Diff\"] = .21\n",
+    "df_100m.at[44, \"total_races_100m\"] = 17\n",
+    "df_100m.at[44, \"Years_Competed_100m\"] = 4\n",
+    "df_100m.at[44, \"Career_Avg_100m\"] = 10.260000\n",
+    "df_100m.at[44, \"Avg_Races_Year_100m\"] = 4.25\n",
+    "df_100m.at[44, \"Career_Avg_100m_PR_Diff\"] = .32"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_100m"
    ]
   },
@@ -1267,12 +1457,22 @@
      "user_tz": 240
     },
     "id": "A_Sj2vLdzyIG",
-    "outputId": "fd9270d9-22a3-4b47-a93f-11d6da38c1a6"
+    "outputId": "fd9270d9-22a3-4b47-a93f-11d6da38c1a6",
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "df_100m = df_100m.sort_values(by='Career_Avg_100m')\n",
     "df_100m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_100m = pd.DataFrame(df_100m)"
    ]
   },
   {
