Fixed null value errors in 200m analysis

--- a/notebooks/200M_Career_Analysis.ipynb
+++ b/notebooks/200M_Career_Analysis.ipynb
@@ -552,6 +552,77 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yrs_competed_200m = pd.DataFrame(yrs_competed_200m)\n",
+    "yrs_competed_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this line of code to find a specific athlete in the data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_200m.loc[(yrs_competed_100m.Athlete == 'Frankie Fredericks')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_200m.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_200m_nulls = yrs_competed_200m[yrs_competed_200m.isnull().any(axis=1)]\n",
+    "#print(yrs_competed_200m_nulls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "yrs_competed_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract Excel file for data fix if needed\n",
+    "\n",
+    "'''\n",
+    "xlwriter = pd.ExcelWriter('200M_Years_Competed.xlsx')\n",
+    "yrs_competed_200m.to_excel(xlwriter, sheet_name='Years Competed 200m')\n",
+    "xlwriter.close()\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "FmQNjnyu6neV"
@@ -928,6 +999,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Career_average_200m = pd.DataFrame(Career_average_200m)\n",
+    "Career_average_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "eGGJnQD4vJWN"
    },
@@ -971,6 +1052,25 @@
    "source": [
     "athlete_race_count_200m = All_200m_Races.groupby('Athlete').size().reset_index(name='total_races_200m')\n",
     "athlete_race_count_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athlete_race_count_200m = pd.DataFrame(athlete_race_count_200m)\n",
+    "athlete_race_count_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athlete_race_count_200m"
    ]
   },
   {
@@ -1069,6 +1169,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m = pd.DataFrame(seasons_and_races_200m)\n",
+    "seasons_and_races_200m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1091,6 +1201,106 @@
    "source": [
     "seasons_and_races_200m['Avg_Races_Year_200m'] = round(seasons_and_races_200m['total_races_200m'] / seasons_and_races_200m['Years'],2)\n",
     "sprinters.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract Excel file for data fix if needed\n",
+    "\n",
+    "'''\n",
+    "xlwriter = pd.ExcelWriter('200M_Races_Seasons.xlsx')\n",
+    "seasons_and_races_200m.to_excel(xlwriter, sheet_name='Seasons & Races 200m')\n",
+    "xlwriter.close()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m.at[17, \"Years\"] = 17\n",
+    "seasons_and_races_200m.at[17, \"Avg_Races_Year_200m\"] = 9.71\n",
+    "seasons_and_races_200m.at[22, \"Years\"] = 7\n",
+    "seasons_and_races_200m.at[22, \"Avg_Races_Year_200m\"] = 4\n",
+    "seasons_and_races_200m.at[42, \"Years\"] = 7\n",
+    "seasons_and_races_200m.at[42, \"Avg_Races_Year_200m\"] = 2.14\n",
+    "seasons_and_races_200m.at[46, \"Years\"] = 6\n",
+    "seasons_and_races_200m.at[46, \"Avg_Races_Year_200m\"] = 2\n",
+    "seasons_and_races_200m.at[53, \"Years\"] = 10\n",
+    "seasons_and_races_200m.at[53, \"Avg_Races_Year_200m\"] = 4.4\n",
+    "seasons_and_races_200m.at[62, \"Years\"] = 10\n",
+    "seasons_and_races_200m.at[62, \"Avg_Races_Year_200m\"] = 5.7\n",
+    "seasons_and_races_200m.at[66, \"Years\"] = 13\n",
+    "seasons_and_races_200m.at[66, \"Avg_Races_Year_200m\"] = 5.23"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seasons_and_races_200m.loc[(seasons_and_races_200m.Athlete == 'Oblique Seville')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seasons_and_races_200m.loc[(seasons_and_races_200m.Athlete == 'Frankie Fredericks')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seasons_and_races_200m.loc[(seasons_and_races_200m.Athlete == 'Pietro Mennea')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seasons_and_races_200m.loc[(seasons_and_races_200m.Athlete == 'Joe DeLoach')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#seasons_and_races_200m.loc[(seasons_and_races_200m.Athlete == 'Wayde van Niekerk')]"
    ]
   },
   {
@@ -1280,6 +1490,109 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract Excel file for data fix if needed\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "xlwriter = pd.ExcelWriter('200M.xlsx')\n",
+    "df_200m.to_excel(xlwriter, sheet_name='200m')\n",
+    "xlwriter.close()\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m.at[12, \"total_races_200m\"] = 15\n",
+    "df_200m.at[12, \"Years_Competed_200m\"] = 7\n",
+    "df_200m.at[12, \"Career_Avg_200m\"] = 21.659333\n",
+    "df_200m.at[12, \"Avg_Races_Year_200m\"] = 2.14\n",
+    "df_200m.at[12, \"Career_Avg_200m_PR_Diff\"] = .80\n",
+    "df_200m.at[28, \"total_races_200m\"] = 165\n",
+    "df_200m.at[28, \"Years_Competed_200m\"] = 17\n",
+    "df_200m.at[28, \"Career_Avg_200m\"] = 20.311576\n",
+    "df_200m.at[28, \"Avg_Races_Year_200m\"] = 9.71\n",
+    "df_200m.at[28, \"Career_Avg_200m_PR_Diff\"] = .63\n",
+    "df_200m.at[39, \"total_races_200m\"] = 137\n",
+    "df_200m.at[39, \"Years_Competed_200m\"] = 16\n",
+    "df_200m.at[39, \"Career_Avg_200m\"] =20.48708\n",
+    "df_200m.at[39, \"Avg_Races_Year_200m\"] = 8.56\n",
+    "df_200m.at[39, \"Career_Avg_200m_PR_Diff\"] = .77\n",
+    "df_200m.at[42, \"total_races_200m\"] = 28\n",
+    "df_200m.at[42, \"Years_Competed_200m\"] = 7\n",
+    "df_200m.at[42, \"Career_Avg_200m\"] = 20.496786\n",
+    "df_200m.at[42, \"Avg_Races_Year_200m\"] = 4.0\n",
+    "df_200m.at[42, \"Career_Avg_200m_PR_Diff\"] = .75\n",
+    "df_200m.at[44, \"total_races_200m\"] = 57\n",
+    "df_200m.at[44, \"Years_Competed_200m\"] = 10\n",
+    "df_200m.at[44, \"Career_Avg_200m\"] = 20.695965\n",
+    "df_200m.at[44, \"Avg_Races_Year_200m\"] = 5.7\n",
+    "df_200m.at[44, \"Career_Avg_200m_PR_Diff\"] = .86"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_200m.loc[(df_200m.Athlete == 'Oblique Seville')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_200m.loc[(df_200m.Athlete == 'Frankie Fredericks')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_200m.loc[(df_200m.Athlete == 'Pietro Mennea')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_200m.loc[(df_200m.Athlete == 'Joe DeLoach')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_200m.loc[(df_200m.Athlete == 'Wayde van Niekerk')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1302,6 +1615,15 @@
    "source": [
     "df_200m = df_200m.sort_values(by='Career_Avg_200m')\n",
     "df_200m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_200m = pd.DataFrame(df_200m)"
    ]
   },
   {
