Fixed Null values for 400m analysis

--- a/notebooks/400M_Career_Analysis.ipynb
+++ b/notebooks/400M_Career_Analysis.ipynb
@@ -552,6 +552,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yrs_competed_400m = pd.DataFrame(yrs_competed_400m)\n",
+    "yrs_competed_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this line of code to find a specific athlete in the data frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_400m.loc[(yrs_competed_400m.Athlete == 'Frankie Fredericks')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_400m.isnull()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#yrs_competed_400m_nulls = yrs_competed_400m[yrs_competed_400m.isnull().any(axis=1)]\n",
+    "#print(yrs_competed_400m_nulls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yrs_competed_400m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Extract Excel file for data fix if needed\n",
+    "\n",
+    "'''\n",
+    "xlwriter = pd.ExcelWriter('400M_Years_Competed.xlsx')\n",
+    "yrs_competed_400m.to_excel(xlwriter, sheet_name='Years Competed 400m')\n",
+    "xlwriter.close()\n",
+    "'''"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "FmQNjnyu6neV"
@@ -928,6 +997,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Career_average_400m = pd.DataFrame(Career_average_400m)\n",
+    "Career_average_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "eGGJnQD4vJWN"
    },
@@ -971,6 +1050,25 @@
    "source": [
     "athlete_race_count_400m = All_400m_Races.groupby('Athlete').size().reset_index(name='total_races_400m')\n",
     "athlete_race_count_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athlete_race_count_400m = pd.DataFrame(athlete_race_count_400m)\n",
+    "athlete_race_count_400m.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "athlete_race_count_400m"
    ]
   },
   {
@@ -1091,6 +1189,49 @@
    "source": [
     "seasons_and_races_400m['Avg_Races_Year_400m'] = round(seasons_and_races_400m['total_races_400m'] / seasons_and_races_400m['Years'],2)\n",
     "sprinters.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Null Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m.at[9, \"Years\"] = 1\n",
+    "seasons_and_races_400m.at[9, \"Avg_Races_Year_400m\"] = 1\n",
+    "seasons_and_races_400m.at[29, \"Years\"] = 3\n",
+    "seasons_and_races_400m.at[29, \"Avg_Races_Year_400m\"] = 1\n",
+    "seasons_and_races_400m.at[32, \"Years\"] = 10\n",
+    "seasons_and_races_400m.at[32, \"Avg_Races_Year_400m\"] = 5.40\n",
+    "seasons_and_races_400m.at[44, \"Years\"] = 11\n",
+    "seasons_and_races_400m.at[44, \"Avg_Races_Year_400m\"] = 8.27\n",
+    "seasons_and_races_400m.at[48, \"Years\"] = 10\n",
+    "seasons_and_races_400m.at[48, \"Avg_Races_Year_400m\"] = 1.20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seasons_and_races_400m"
    ]
   },
   {
@@ -1265,10 +1406,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "df_400m = df_400m.dropna(subset='400_PR')\n",
+    "df_400m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Null Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_400m.at[12, \"total_races_400m\"] = 3\n",
+    "df_400m.at[12, \"Years_Competed_400m\"] = 3\n",
+    "df_400m.at[12, \"Career_Avg_400m\"] = 47.793333\n",
+    "df_400m.at[12, \"Avg_Races_Year_400m\"] = 1.00\n",
+    "df_400m.at[12, \"Career_Avg_400m_PR_Diff\"] = .08\n",
+    "df_400m.at[28, \"total_races_400m\"] = 1\n",
+    "df_400m.at[28, \"Years_Competed_400m\"] = 1\n",
+    "df_400m.at[28, \"Career_Avg_400m\"] = 46.280000\n",
+    "df_400m.at[28, \"Avg_Races_Year_400m\"] = 1.00\n",
+    "df_400m.at[28, \"Career_Avg_400m_PR_Diff\"] = 0\n",
+    "df_400m.at[39, \"total_races_400m\"] = 3\n",
+    "df_400m.at[39, \"Years_Competed_400m\"] = 2\n",
+    "df_400m.at[39, \"Career_Avg_400m\"] = 46.903333\n",
+    "df_400m.at[39, \"Avg_Races_Year_400m\"] = 1.50\n",
+    "df_400m.at[39, \"Career_Avg_400m_PR_Diff\"] = 1.03\n",
+    "df_400m.at[44, \"total_races_400m\"] = 91\n",
+    "df_400m.at[44, \"Years_Competed_400m\"] = 11\n",
+    "df_400m.at[44, \"Career_Avg_400m\"] = 45.598901\n",
+    "df_400m.at[44, \"Avg_Races_Year_400m\"] = 8.27\n",
+    "df_400m.at[44, \"Career_Avg_400m_PR_Diff\"] = 2.57"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df_400m"
    ]
   },
