Added markdown code

--- a/notebooks/400M_Career_Analysis.ipynb
+++ b/notebooks/400M_Career_Analysis.ipynb
@@ -5165,7 +5165,7 @@
     "xlwriter = pd.ExcelWriter('400M_Analysis.xlsx')\n",
     "df_400m.to_excel(xlwriter, sheet_name='400m')\n",
     "Z_Score_Ranking_400m.to_excel(xlwriter, sheet_name='400m Z-Score Rankings')\n",
-    "Final_Rankings_400m.to_excel(xlwriter, sheet_name='400m Fianl Rankings')\n",
+    "Final_Rankings_400m.to_excel(xlwriter, sheet_name='400m Final Rankings')\n",
     "#df_400m_stat_analysis.to_excel(xlwriter, sheet_name='400m Statisitcal Analysis')\n",
     "xlwriter.close()"
    ]
