Added markdown code for 200m analysis.

--- a/notebooks/200M_Career_Analysis.ipynb
+++ b/notebooks/200M_Career_Analysis.ipynb
@@ -1228,6 +1228,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Null Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1501,6 +1508,13 @@
     "df_200m.to_excel(xlwriter, sheet_name='200m')\n",
     "xlwriter.close()\n",
     "'''"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Null Values"
    ]
   },
   {
@@ -5352,7 +5366,7 @@
     "xlwriter = pd.ExcelWriter('200M_Analysis.xlsx')\n",
     "df_200m.to_excel(xlwriter, sheet_name='200m')\n",
     "Z_Score_Ranking_200m.to_excel(xlwriter, sheet_name='200m Z-Score Rankings')\n",
-    "Final_Rankings_200m.to_excel(xlwriter, sheet_name='200m Fianl Rankings')\n",
+    "Final_Rankings_200m.to_excel(xlwriter, sheet_name='200m Final Rankings')\n",
     "#df_200m_stat_analysis.to_excel(xlwriter, sheet_name='200m Statisitcal Analysis')\n",
     "xlwriter.close()"
    ]
