Added markdown code for 100m analysis.

--- a/notebooks/100M_Career_Analysis.ipynb
+++ b/notebooks/100M_Career_Analysis.ipynb
@@ -1174,6 +1174,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Null Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1394,6 +1401,13 @@
    "source": [
     "df_100m = df_100m.dropna(subset='100_PR')\n",
     "df_100m"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fixing Null Values"
    ]
   },
   {
@@ -5379,7 +5393,7 @@
     "xlwriter = pd.ExcelWriter('100M_Analysis.xlsx')\n",
     "df_100m.to_excel(xlwriter, sheet_name='100m')\n",
     "Z_Score_Ranking_100m.to_excel(xlwriter, sheet_name='100m Z-Score Rankings')\n",
-    "Final_Rankings_100m.to_excel(xlwriter, sheet_name='100m Fianl Rankings')\n",
+    "Final_Rankings_100m.to_excel(xlwriter, sheet_name='100m Final Rankings')\n",
     "#df_100m_stat_analysis.to_excel(xlwriter, sheet_name='100m Statisitcal Analysis')\n",
     "xlwriter.close()"
    ]
